# hiemal

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: recursive.rs
examples/: factorial.json  factorial.yml  fibonacci.yml  include.yml
src/: any.rs  array.rs  embedded_functions.rs  lib.rs  macros.rs  main.rs  number.rs  string.rs
