[package]
name = "hiemal"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
anyhow = { version = "1.0", features = ["std", "backtrace"] }
serde_json = "1.0.149"
typetag = "0.2.21"
paste = "1.0.15"

[dev-dependencies]
nanorand = "0.8"
pretty_assertions = "1.4"
