[package]
name = "hiemal"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
anyhow = { version = "1.0", features = ["std", "backtrace"] }
ureq = { version = "3.3" }
paste = "1.0.15"
url = {version = "2.5.8", features = ["serde"]}

[dev-dependencies]
nanorand = "0.8"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "recursive"
harness = false
